--- a/.github/workflows/deploy_train.yml
+++ b/.github/workflows/deploy_train.yml
@@ -24,7 +24,7 @@ jobs:
           azure_credentials: ${{ secrets.AZURE_CREDENTIALS }}
           armtemplate_file: "arm_deploy.json"
           armtemplateparams_file: "arm_deploy.params.json"
-          resource_group: "azmltemplate"
+          resource_group: "azmlopstemplate"
           mapped_params: '{"patToken":"${{secrets.PATTOKEN}}", "computeName":"mycluster", "workspaceName":"myworkspace" }'
 
     # now send for training.
