--- a/.github/workflows/deploy_model.yml
+++ b/.github/workflows/deploy_model.yml
@@ -40,7 +40,7 @@ jobs:
         uses: Azure/aml-deploy@v1
         with:
             azure_credentials: ${{ secrets.AZURE_CREDENTIALS }}
-            model_name:  "${{ steps.aml_registermodel.outputs.model_id }}"
+            model_name:  "${{ steps.aml_registermodel.outputs.model_name }}"
             model_version: "${{ steps.aml_registermodel.outputs.model_version }}"
             parameters_file: "deploy_aci.json"
       
@@ -56,7 +56,7 @@ jobs:
         uses: Azure/aml-deploy@v1
         with:
             azure_credentials: ${{ secrets.AZURE_CREDENTIALS }}
-            model_name:  "${{ steps.aml_registermodel.outputs.model_id }}"  
+            model_name:  "${{ steps.aml_registermodel.outputs.model_name }}"  
             model_version: "${{ steps.aml_registermodel.outputs.model_version }}"
             parameters_file: "deploy_aks.json"
 
